# Raspberry_Pi_LVX

./: README.md
Livox_SDK_zero/sample/lidar_lvx_file/: CMakeLists.txt  filename_lvx.cpp  filename_lvx.h  lvx_file.cpp  lvx_file.h  main.cpp
Raspberry_Pi_Guide/: Auto_Start_Test  NanoPi NEO3 操作手册.docx  树莓派Zero 2W 开发指南.docx  树莓派串口通信指南.docx
